--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>航空法クイズアプリ</title>
-    <link rel="stylesheet" href="static/css/style.css">
+    <title>事業用クイズ</title>
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <h1>航空法クイズアプリ</h1>
+        <h1>事業用クイズ</h1>
     </header>
     <main>
         <section id="quiz-selection">
