--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 航空法クイズアプリ</p>
+        <p>&copy; 2024 SDW</p>
     </footer>
     <script src="app.js"></script>
 </body>
